feat : ItemViewUseCase, JpaRepository 조회 로직 연동
- ItemIntegrationTest 통과하도록 수